<resources>
    <string name="app_name">qiwi-blockchain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_pk">Public key</string>
    <string name="menu_sk">Secret key</string>
    <string name="menu_passport">Passport data</string>
    <string name="generate_key">Generate key pair</string>
    <string name="verify">Verify</string>
    <string name="verified">Verified</string>
    <string name="password">Password</string>
    <string name="password_hint">password</string>
    <string name="finish">Finish</string>
    <string name="reset_wallet">Reset wallet</string>
    <string name="restored">Restored</string>
    <string name="put_info">Put info</string>
    <string name="scan_results">Scan Results:</string>


</resources>
