<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/approval_layout">



    <me.dm7.barcodescanner.zxing.ZXingScannerView
        android:id="@+id/qrCodeScanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </me.dm7.barcodescanner.zxing.ZXingScannerView>
    <RelativeLayout
        android:id="@+id/generation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/password_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="71dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_ver_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/password_ver"
            android:layout_marginLeft="37dp"
            android:layout_marginStart="37dp"
            android:layout_toEndOf="@+id/password_ver"
            android:layout_toRightOf="@+id/password_ver"
            android:inputType="textPassword"
            android:background="@null"
            android:ems="10"
            android:hint="@string/password_hint" />

        <Button
            android:id="@+id/generate_btn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_ver"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:layout_marginTop="80dp"
            android:text="@string/generate_key"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </RelativeLayout>
    <TextView
        android:id="@+id/verified_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/item_text_height"
        android:text="@string/verified" />
    <LinearLayout
        android:id="@+id/verification_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menu_sk"
            android:textSize="@dimen/item_text_height"/>

        <EditText
            android:id="@+id/sk_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            />


        <LinearLayout
            android:id="@+id/passport_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/menu_passport"
                    android:textSize="@dimen/item_text_height"/>
                <EditText
                    android:id="@+id/passport_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/put_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/put_info" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>